--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,7 @@ body {
 
 .social-link img {
 	width: 20px;
+    height: 20px;
 }
 
 #about {
@@ -69,7 +70,8 @@ body {
 
 .picture img {
 	width: 100%;
-
+    max-width: 500px;
+    max-height: 500px;
 }
 #about-me {
 	flex: 2
