--- a/assets/style.css
+++ b/assets/style.css
@@ -69,9 +69,8 @@ body {
 }
 
 .picture img {
-	width: 100%;
-    max-width: 500px;
-    max-height: 500px;
+    width: 500px;
+    height: 500px;
 }
 #about-me {
 	flex: 2
@@ -260,6 +259,10 @@ input[type="submit"] {
 	#about-me h6, #about-me p {
 		width: 100%;
 	}
+    .picture img {
+        width: 500px;
+        height: 500px;
+    }
 }
 
 @media all and (max-width: 1000px) {
@@ -267,9 +270,10 @@ input[type="submit"] {
 		flex-direction: column;
 
 	}
-	.picture {
-		width: 50%;
-	}
+    .picture img {
+        width: 400px;
+        height: 400px;
+    }
 	.picture.left::before {
 		width: 100%;
 		height: 30%;
@@ -338,6 +342,11 @@ input[type="submit"] {
 	.picture.left::before, .picture.right::before {
 		height: 150px;
 	}
+    .picture img {
+        max-width: 500px;
+        width: 100%;
+        height: auto;
+    }
 	#services .container {
 		align-items: center;
 	}
