--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,18 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+
+/* .overlay {
+    display: none;
+    position: fixed;
+    z-index: 1100;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0,0,0, 0.2);
+} */
+
 header {
 	background-color: white;
 	position: sticky;
@@ -116,10 +128,16 @@ nav a {
 	padding-bottom: 100%;
 
 }
+/* .gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+} */
 .gallery-item {
 	position: absolute;
 	width: 100%;
-	height: 100%;
+    height: 100%;
+	/* height: 350px; */
 	object-fit: cover;
 	padding: .5em;
 }
@@ -132,6 +150,16 @@ nav a {
 	display: flex;
 	font-size: 24px;
 }
+/* .modal {
+    position: fixed;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: 500px;
+    background-color: white;
+} */
 
 .quote {
 	font-family: 'Spectral';
