--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,11 @@ nav a {
     height: 20px;
 }
 
+.carousel-item.active img {
+    width: 1920px;
+    height: 880px;
+}
+
 #about {
 	display: flex;
 	background-color: #F6D2B8;
