--- a/assets/style.css
+++ b/assets/style.css
@@ -44,9 +44,9 @@ nav a {
     height: 20px;
 }
 
-.carousel-item.active img {
-    width: 1920px;
-    height: 880px;
+.w-100 {
+    width: 1920px!important;
+    height: 880px!important;
 }
 
 #about {
