--- a/assets/style.css
+++ b/assets/style.css
@@ -119,8 +119,8 @@ nav a {
 }
 .gallery-item {
 	position: absolute;
-	width: 100%;
-    height: 100%;
+	width: 440px;
+    height: 440px;
 	object-fit: cover;
 	padding: .5em;
 }
@@ -252,7 +252,14 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 
-@media all and (max-width: 1180px) {
+@media( max-width: 1400px) {
+    .gallery-item {
+        width: 380px;
+        height: 380px;
+    }
+}
+
+@media (max-width: 1200px) {
 	.picture {
 		flex : 2;
 	}
@@ -266,6 +273,10 @@ input[type="submit"] {
 	#about-me h6, #about-me p {
 		width: 100%;
 	}
+    .gallery-item {
+        width: 320px;
+        height: 320px;
+    }
 }
 
 @media all and (max-width: 1000px) {
@@ -321,6 +332,19 @@ input[type="submit"] {
 		right: 0;
 		z-index: -1;
 	}
+}
+@media(max-width: 992px) {
+    .gallery-item {
+        width: 240px;
+        height: 240px;
+    }
+}
+
+@media(max-width: 768px) {
+    .gallery-item {
+        width: 270px;
+        height: 270px;
+    }
 }
 
 @media all and (max-width: 650px) {
@@ -378,4 +402,11 @@ input[type="submit"] {
 		width: 80%;
         text-align: center;
 	}
+}
+
+@media (max-width: 575px) {
+    .gallery-item {
+        width: 100%;
+        height: 100%;
+    }
 }
