--- a/assets/style.css
+++ b/assets/style.css
@@ -371,7 +371,7 @@ input[type="submit"] {
 		height: 150px;
 	}
     .picture img {
-        max-width: 400px;
+        max-width: 300px;
         width: 100%;
         height: auto;
     }
@@ -410,5 +410,9 @@ input[type="submit"] {
     .img-fluid {
         width: 100%;
         height: 100%;
+    }
+
+    .picture img {
+        width: 230px;
     }
 }
