--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,10 @@ body {
 	font-family: 'Inter';
 	font-style: normal;
 }
+a {
+    color: currentColor;
+    text-decoration: none;
+}
 
 header {
 	background-color: white;
@@ -207,6 +211,7 @@ nav a {
 }
 #contact .picture.right {
     display: flex;
+    justify-content: center;
     align-items: center;
     margin-right: 0;
 }
@@ -252,6 +257,15 @@ input[type="submit"] {
     color: white;
     border: none;
 	padding: .5em 1em
+}
+
+footer {
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.social-link--footer img {
+    width: 25px;
 }
 
 @media( max-width: 1400px) {
@@ -371,8 +385,7 @@ input[type="submit"] {
 		height: 150px;
 	}
     .picture img {
-        max-width: 300px;
-        width: 100%;
+        width: 300px;
         height: auto;
     }
 	#services .container {
@@ -401,7 +414,6 @@ input[type="submit"] {
 		width: 100%;
 	}
 	.picture {
-		width: 80%;
         text-align: center;
 	}
 }
