--- a/assets/style.css
+++ b/assets/style.css
@@ -267,6 +267,10 @@ footer {
 .social-link--footer img {
     width: 25px;
 }
+.icon--border {
+    border: solid 1.5px black;
+    border-radius: 4px;
+}
 
 @media( max-width: 1400px) {
     .img-fluid {
